[package]
name = "provider-proxy"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
hyper = { version="0.14", default-features=false, features=['http1', 'client'] }
time = { version = "0.3.28", default-features=false, features= ["wasm-bindgen"] }
tokio = { version = "1.0", default-features=false, features=['io-util', 'macros']}
worker = { version = "0.0.18" }

[profile.release]
lto = true
strip = true
codegen-units = 1
